Fix Projects section styling & restore blur effects
 Features:
- Fixed Projects section CSS and layout
- Restored blur effects to certificate cards
- Added glassmorphism design consistency
- Cleaned up security script references

 Cleanup:
- Removed unnecessary security.css reference
- Streamlined script includes
- Updated .gitignore for better file management
- Inline security protection for better performance

 UI/UX:
- Projects section now displays properly with maintenance notice
- Loading dots animation working correctly
- Certificate cards have proper blur backdrop
- Consistent styling across all sections

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@ node_modules/
 README-*.md
 *-draft.md
 
-# Original security files (keep enhanced versions only)
-scripts/security.js
-scripts/test-security.js
+# Test and unnecessary files
+test-*.js
+test.html
+*-enhanced.js
+*-backup.js
+*-loader.js
+*-new.js
